修改了关于np.float与np.bool的描述

--- a/npArr.ipynb
+++ b/npArr.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "79575d71",
    "metadata": {},
    "outputs": [],
@@ -402,10 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a6965535",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "转换结果为： True\n"
+     ]
+    }
+   ],
    "source": [
     "print('转换结果为：', np.bool(42))  # 整型转换为布尔型"
    ]
@@ -445,7 +453,7 @@
    "id": "906271b4",
    "metadata": {},
    "source": [
-    "在较新的 NumPy 版本中，np.float 被弃用，并在后续版本中移除了。它原本是 Python 内置 float 类型的一个别名，但 NumPy 为了简化命名空间、减少混淆，决定将其删除。\n"
+    "在numpy 1.20版本之后，numpy.float() 与numpy.bool()被弃用;numpy.float()在后续版本中移除了。它原本是 Python 内置 float 类型的一个别名，但 NumPy 为了简化命名空间、减少混淆，决定将其删除。但在1.24版本之后，开发者将numpy.bool()恢复为别名，所以在1.24版本之后numpy.bool()可以正常使用（目前2.3.3版本依然支持numpy.bool()）\n"
    ]
   },
   {
