--- a/npMat.ipynb
+++ b/npMat.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "979a2712",
    "metadata": {},
    "outputs": [],
@@ -129,10 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7f80ed1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "matr1 = np.asmatrix('1 2 3;4 5 6;7 8 9')\n",
     "print(matr1)"
@@ -477,7 +487,7 @@
    "source": [
     "arr1 = np.array([[0, 0, 0], [1, 1, 1], [2, 2, 2], [3, 3, 3]])\n",
     "print(arr1)\n",
-    "print(arr1.shape)"
+    "print(arr1.shape) "
    ]
   },
   {
@@ -498,7 +508,105 @@
    "id": "c8c5396a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(arr1 + arr2)  #数组相加"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a07ceece",
+   "metadata": {},
+   "source": [
+    "(4,3)       \n",
+    "|0|0|0|\n",
+    "|--|--|--|\n",
+    "|1|1|1|\n",
+    "|2|2|2|\n",
+    "|3|3|3|\n",
+    "\n",
+    "\\+\n",
+    "\n",
+    "(3,)\n",
+    "|1|2|3|\n",
+    "|--|--|--|\n",
+    "|1|2|3|\n",
+    "|1|2|3|\n",
+    "|1|2|3|\n",
+    "\n",
+    "↓\n",
+    "\n",
+    "(4,3)\n",
+    "|1|2|3|\n",
+    "|--|--|--|\n",
+    "|2|3|4|\n",
+    "|3|4|5|\n",
+    "|4|5|6|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22708e26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr1 = np.array([[0, 0, 0], [1, 1, 1], [2, 2, 2], [3, 3, 3]])\n",
+    "print(arr1)\n",
+    "print(arr1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf602c96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2 = np.array([1, 2, 3, 4]).reshape((4, 1))\n",
+    "print(arr2)\n",
+    "print(arr2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "896edbca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(arr1 + arr2)  #数组相加"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8d83a39",
+   "metadata": {},
+   "source": [
+    "(4,3)       \n",
+    "|0|0|0|\n",
+    "|--|--|--|\n",
+    "|1|1|1|\n",
+    "|2|2|2|\n",
+    "|3|3|3|\n",
+    "\n",
+    "\\+\n",
+    "\n",
+    "(4,1)\n",
+    "|1|1|1|\n",
+    "|--|--|--|\n",
+    "|2|2|2|\n",
+    "|3|3|3|\n",
+    "|4|4|4|\n",
+    "\n",
+    "↓\n",
+    "\n",
+    "(4,3)\n",
+    "|1|1|1|\n",
+    "|--|--|--|\n",
+    "|3|3|3|\n",
+    "|5|5|5|\n",
+    "|7|7|7|"
+   ]
   }
  ],
  "metadata": {
