清除所有ipynb的输出结果

--- a/npMat.ipynb
+++ b/npMat.ipynb
@@ -27,7 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "# numpy version 2.3.3"
    ]
   },
   {
