增加了npStats文件中对np自带的部分数据类型的说明

--- a/npStats.ipynb
+++ b/npStats.ipynb
@@ -295,6 +295,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd2d8a69",
+   "metadata": {},
+   "source": [
+    "延伸：其他常见 NumPy 类型转换\n",
+    "| numpy类型 | python类型 | \n",
+    "|-|-|\n",
+    "| np.int32/np.int64 | int(x) | \n",
+    "| np.float64 | float(x) | \n",
+    "| np.str_ | str(x) | \n",
+    "| np.bool_ | bool(x) | \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0faf5f97",
@@ -333,7 +347,7 @@
    "outputs": [],
    "source": [
     "names = np.array(['小明', '小黄', '小花', '小明', '小花', '小兰', '小白','小明'])\n",
-    "print(names)"
+    "print(names)\n"
    ]
   },
   {
@@ -354,6 +368,20 @@
    "outputs": [],
    "source": [
     "print(sorted(set(names))) #不借助np实现unique函数的效果，但是由于numpy版本更新，python官方的常用函数不匹配np数组"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5f6ae3d",
+   "metadata": {},
+   "source": [
+    "为什么会出现 np.str_ 而不是普通字符串？\n",
+    "这是因为：\n",
+    "- names 是一个 NumPy 数组，元素类型是 np.str_（NumPy 的 Unicode 字符串类型）。\n",
+    "- 当你对 set(names) 去重时，集合中仍然保留的是 np.str_ 类型。\n",
+    "- sorted() 对集合排序后，返回的是一个列表，但元素类型没有改变，仍然是 np.str_。\n",
+    "所以你看到的结果是：\n",
+    "[np.str_('小兰'), np.str_('小明'), np.str_('小白'), np.str_('小花'), np.str_('小黄')]"
    ]
   },
   {
